--- a/Week 1/pie.html
+++ b/Week 1/pie.html
@@ -88,9 +88,11 @@
 	  <a href="http://validator.w3.org/check/referer">
         <img src="http://d.hiphotos.baidu.com/shitu/pic/item/32fa828ba61ea8d32ef198a9910a304e241f5848.jpg" alt="Something Goes Wrong" width = "88" height = "31" style="border:0">
 	  </a>
-	  <a href="http://jigsaw.w3.org/css-validator/check/referer">
-        <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Something Goes Wrong" style="border:0">
-	  </a>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+      </a>
 	  <!-- Link -->
   </body>
   <!-- the body -->
