--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -11,37 +11,31 @@
   <!-- head part -->
   <body>
     <div class="first">
-     <h1><strong>EVERY MENU</strong></h1>
+    <br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+     <h1><strong>Enjoy Cooking</strong></h1>
 	 <h3>A Recipe Makes Life Better</h3>
 	</div>
 
-	<hr />
-
 	<div class="block">
 	  <br />
-	  <br />
-	  <br />
-	  <br />
-	  <br />
-	  <br />
-	  <br />
-	  
 	  <a href="pie.html"><h2 class="title"><strong>Grandma's Lemon Meringue Pie</strong></h2></a>
-	  <a href="pie.html"><img src="http://www.bettycrocker.com/-/media/Images/Betty-Crocker/Tips/TipsLibrary/Cooking-Tips/lemon-meringue-pie-from-scratch/perfect-lemon-meringue-pie_hero.jpg?h=450&la=en&w=800" alt="Lemon Meringue Pie" width = "500" height = "300"></a>
+	  <br />
+	  <br />
+	  <a href="pie.html"><img src="http://www.bettycrocker.com/-/media/Images/Betty-Crocker/Tips/TipsLibrary/Cooking-Tips/lemon-meringue-pie-from-scratch/perfect-lemon-meringue-pie_hero.jpg?h=450&la=en&w=800" alt="Lemon Meringue Pie" width = "500" height = "320"></a>
       <a href="pie.html"><div id="introduction">
         <div class="details">
           <blockquote>There is something fresh and new about Lemon Meringue Pie. Strangely, there’s something nostalgic and lovely about it, too. This pie is sweet and perfect, just like the pie Grandma used to make…except for one major change. Instead of cooking your lemon custard in a finicky, boiling water bath (who keeps a double broiler on	hand nowadays?), you get to thicken the filling with your trusty microwave. Old-fashioned flavors made with newfangled technology? Now, that’s a pie you can pull together in no time at all!</blockquote>
-          <blockquote>Despite the slightly speedier cook time, this pie tastes just like a classic Lemon Meringue Pie. The custard is the color of golden sunshine and tastes like a batch of fresh-squeezed lemonade on a hot day. The meringue is light and fluffy, with a smooth, shiny texture that causes you to open your mouth in wonder and awe...and to shovel in an entire spoonful. It’s perfectly lovely. Retro flair with an updated kiss of ease.</blockquote>
         </div>
       </div></a>
-    </div>
-
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>	
-
-    <div class="mark">
+      <div class="mark">
 	  <a href="http://validator.w3.org/check/referer">
         <img src="http://d.hiphotos.baidu.com/shitu/pic/item/32fa828ba61ea8d32ef198a9910a304e241f5848.jpg" alt="Something Goes Wrong" width="88" height="31">
 	  </a>
@@ -49,6 +43,6 @@
         <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Something Goes Wrong">
 	  </a>
 	</div>
-	<!-- link -->
+    </div>
   </body>
 </html>
