--- a/Week 1/pie.html
+++ b/Week 1/pie.html
@@ -12,7 +12,8 @@
   <body>
     <h1><strong>Grandma's Lemon Meringue Pie</strong></h1>
     <br />
-    <img src="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie.jpg" alt= "The picture of the pie">
+    <img src="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie.jpg"
+    alt= "The picture of the pie">
     <p>One 9-inch pie<br />
       30 Min - Prep time<br />
       10 Min - Cook time<br />
@@ -22,7 +23,7 @@
     <hr />
 	<!-- The main heading -->
     <h2>INGREDIENTS</h2>
-	<ul id="first">
+	<ul class="first">
 	  <li>1 cup white sugar</li>
 	  <li>2 tablespoons all-purpose flour</li>
 	  <li>3 tablespoons cornstarch</li>
@@ -41,7 +42,7 @@
 	<ol>
 	  <li><strong>Preheat Oven</strong>: Preheat oven to 350 degrees F (175 degrees C).</li>
 	  <li><strong>Make Lemon Filling</strong>: In a medium saucepan ...
-		<ul style="margin-top:0;margin-bottom:0">
+		<ul class="second">
 	      <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
 	      <li>Stir in water, lemon juice and lemon zest.</li>
 	      <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
@@ -55,7 +56,7 @@
 		</ul>
 	  </li>
 	  <li><strong>Make Meringue</strong>: In a large glass or metal bowl ...
-		<ul style="margin-top:0;margin-bottom:0">
+		<ul class="third">
 	      <li>Whip egg whites until foamy.</li>
 	      <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
 	      <li>Spread meringue over pie, sealing the edges at the crust.</li>
@@ -80,18 +81,21 @@
 	  <hr />
 	  <!-- block2 -->
 	<h2>LINKS</h2>
-	  <a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe">Search for other lemon meringue pie recipes</a>
+	  <a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe">
+	  Search for other lemon meringue pie recipes</a>
 	  <br />
       <a href="index.html">Home</a>
 	  <br />
 	  <p></p>
 	  <a href="http://validator.w3.org/check/referer">
-        <img src="http://d.hiphotos.baidu.com/shitu/pic/item/32fa828ba61ea8d32ef198a9910a304e241f5848.jpg" alt="Something Goes Wrong" width = "88" height = "31" style="border:0">
+        <img class="check1"
+        src="http://d.hiphotos.baidu.com/shitu/pic/item/32fa828ba61ea8d32ef198a9910a304e241f5848.jpg"
+        alt="Valid HTML">
 	  </a>
       <a href="http://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
+        <img class="check2" 
             src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
+            alt="Valid CSS!"/>
       </a>
 	  <!-- Link -->
   </body>
