Upload Week2 Homework

--- a/Week2/tmnt.html
+++ b/Week2/tmnt.html
@@ -236,9 +236,7 @@
            <!-- critic -->
        </div>
        <!-- right comment -->
-       <div id ="pagenumber">
-		 <p>(1-8) of 88</p>
-       </div>
+		   <footer>(1-8) of 88</footer>
        <!-- page number -->
      </div>
      <!-- board -->
