--- a/Week2/tmnt.html
+++ b/Week2/tmnt.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <meta name="movie" content="A movie poster" />
-   <link href="movie.css" type="text/css" rel="stylesheet" media="screen" />
-   <link href="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
-   type="img/gif" rel="shortcut icon" />
-   <title>TMNT - Rancid Tomatoes</title>
+    <title>TMNT - Rancid Tomatoes</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="movie.css" type="text/css" rel="stylesheet" />
+    <link
+    href="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+    type="img/gif" rel="shortcut icon" />
   </head>
   <!-- head -->
   <body>
     <div id="banner">
-      <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/banner.png?version=1&modificationDate=1268896312000"
+      <img
+      src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png"
       alt="Rancid Tomatoes" />
     </div>
     <!-- banner -->
@@ -22,7 +23,7 @@
    <div id="board">
      <div id="rightpart">
        <div id="generaloverview">
-         <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/generaloverview.png?version=1&modificationDate=1268896385000"
+         <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/generaloverview.png"
          alt="general overview" />       	 
        </div>
        <!-- general overlook -->
@@ -63,21 +64,17 @@
        </div>
        <!-- right part -->
        <div id="rotten">
-         <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rottenbig.png?version=1&modificationDate=1268896385000"
+         <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png"
          alt="rotten" />
-         <span id="percentage">
-           32%
-         </span>
-         <span id="reviewstotal">
-           (88 reviews total)
-         </span>
+         <span id="percentage">32%</span>
+         <span id="reviewstotal"> (88 reviews total)</span>
        </div>
        <!-- rotten -->
        <div id="leftcomment">
          <div class="comment">
            <p>
              <img class="icon"
-             src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+             src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
              alt="rotten" />
              <q class="quote">Ditching the cheeky, self-aware wink that helped to excuse 
              the concept's inherent corniness, the movie attempts to look polished and 
@@ -88,7 +85,7 @@
          <!-- comment -->
          <div class="critic">
            <p>
-             <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+             <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
              alt="critic" />
 			 Peter Debruge <br />
 			 <span class="job">Variety</span>
@@ -98,7 +95,7 @@
          <div class="comment">
            <p>
              <img class="icon"
-             src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/fresh.gif?version=1&modificationDate=1268897322000"
+             src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/fresh.gif"
              alt="fresh" />
              <q class="quote">TMNT is a fun, action-filled adventure that will satisfy 
              longtime fans and generate a legion of new ones.</q>
@@ -107,7 +104,7 @@
          <!-- comment -->
          <div class="critic">
            <p>
-             <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+             <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
              alt="critic" />
 			 Todd Gilchrist <br />
 			 <span class="job">IGN Movies</span>
@@ -117,7 +114,7 @@
          <div class="comment">
            <p>
              <img class="icon"
-             src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+             src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
              alt="rotten" />
              <q class="quote">It stinks!</q>
            </p>
@@ -125,7 +122,7 @@
          <!-- comment -->
          <div class="critic">
            <p>
-             <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+             <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
              alt="critic" />
 			  Jay Sherman (unemployed)
            </p>
@@ -134,7 +131,7 @@
          <div class="comment">
            <p>
              <img class="icon"
-             src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+             src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
              alt="rotten" />
              <q class="quote">The rubber suits are gone and they've been redone with 
              fancy computer technology, but that hasn't stopped them from becoming dull.
@@ -144,7 +141,7 @@
          <!-- comment -->
          <div class="critic">
            <p>
-             <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+             <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
              alt="critic" />
 			  Joshua Tyler <br />
 			 <span class="job">CinemaBlend.com</span>
@@ -157,7 +154,7 @@
            <div class="comment">
              <p>
                <img class = "icon"
-               src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+               src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
                alt="rotten" />
                <q class="quote">The turtles themselves may look prettier, but are no 
                smarter; torn irreparably from their countercultural roots, our 
@@ -168,7 +165,7 @@
            <!-- comment -->
            <div class="critic">
              <p>
-               <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+               <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
                alt="critic" />
 			   Jeannette Catsoulis <br />
 			   <span class="job">New York Times</span>
@@ -178,7 +175,7 @@
            <div class="comment">
              <p>
                <img class="icon"
-               src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+               src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
                alt="rotten" />
                <q class="quote">Impersonally animated and arbitrarily plotted, the story 
                appears to have been made up as the filmmakers went along.</q>
@@ -187,7 +184,7 @@
            <!-- comment -->
            <div class="critic">
              <p>
-               <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+               <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
                alt="critic" />
 			   Ed Gonzalez <br />
 			   <span class="job">Slant Magazine</span>
@@ -197,7 +194,7 @@
            <div class="comment">
              <p>
                <img class="icon"
-               src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/fresh.gif?version=1&modificationDate=1268897322000"
+               src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/fresh.gif"
                alt="fresh" />
                <q class="quote">The striking use of image and motion allows each sequence 
                to leave an impression. It's an accomplished restart to this franchise.</q>
@@ -206,7 +203,7 @@
            <!-- comment -->
            <div class="critic">
              <p>
-               <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+               <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
                alt="critic" />
 			   Mark Palermo <br />
 			   <span class="job">Coast (Halifax, Nova Scotia)</span>
@@ -216,7 +213,7 @@
            <div class="comment">
              <p>
                <img class="icon"
-               src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/rotten.gif?version=1&modificationDate=1268896385000"
+               src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif"
                alt="rotten" />
                <q class="quote">The script feels like it was computer generated. This 
                mechanical presentation lacks the cheesy charm of the three live action 
@@ -227,7 +224,7 @@
            <!-- comment -->
            <div class="critic">
              <p>
-               <img src="http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/critic.gif?version=1&modificationDate=1268896312000"
+               <img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif"
                alt="critic" />
 			   Steve Rhodes <br />
 			   <span class="job">Internet Reviews</span>
@@ -244,12 +241,12 @@
 	   <a href="http://validator.w3.org/check/referer">
          <img class="check"
          src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/w3c-xhtml.png"
-         alt="Valid HTML!">
+         alt="Valid XHTML 1.1">
 	   </a>
 	   <br />
 	   <a href="http://jigsaw.w3.org/css-validator/check/referer">
          <img class="check"
-         src="http://jigsaw.w3.org/css-validator/images/vcss"
+         src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/w3c-css.png"
          alt="Valid CSS!" />
        </a>
    </div>
