--- a/Week4/Calculator.html
+++ b/Week4/Calculator.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Calculator</title>
-	<meta charset="utf-8">
-	<link href="Calculator.css" type="text/css" rel="stylesheet" />
+	  <title>Calculator</title>
+	  <meta charset="utf-8">
+	  <link href="Calculator.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div id="calculating-area">
       <div id="calculator">
         <span id="C">C</span><span id="a1">a</span><span id="l1">l</span><span id="c">c</span><span id="u">u</span><span id="l2">l</span><span id="a2">a</span><span id="t">t</span><span id="o">o</span><span id="r">r</span>
       </div>
+      <!-- the head title --> 
       <script src="Calculator.js" type="text/javascript"></script>
       <div id="board">
         <div id="lastCalculation">
           <span id="last"></span>
         </div>
+        <!-- last screen -->
         <div id="inputs">
           <div id="screen" class="ani">
             <span id="input"></span>
           </div>
         </div>
+        <!-- input screen --> 
         <div class="row">
-            <button title="7" id="7" class="num" onclick="input1(this.id)"><span class= "key">7</span></button>
-            <button title="8" id="8" class="num" onclick="input1(this.id)"><span class= "key">8</span></button>
-            <button title="9" id="9" class="num" onclick="input1(this.id)"><span class= "key">9</span></button>
-            <button title="/" id="/" class="operator" onclick="input2(this.id)"><span class= "key">/</span></button>
+            <button value="7" id="7" class="normal num"">7</button>
+            <button value="8" id="8" class="normal num">8</button>
+            <button value="9" id="9" class="normal num">9</button>
+            <button value="/" id="devide" class="operator other">/</button>
         </div>
         <div class="row">
-            <button title="4" id="4" class="num" onclick="input1(this.id)"><span class= "key">4</span></button>
-            <button title="5" id="5" class="num" onclick="input1(this.id)"><span class= "key">5</span></button>
-            <button title="6" id="6" class="num" onclick="input1(this.id)"><span class= "key">6</span></button>
-            <button title="*" id="*" class="operator" onclick="input2(this.id)"><span class= "key">*</span></button>
+            <button value="4" id="4" class="normal num">4</button>
+            <button value="5" id="5" class="normal num">5</button>
+            <button value="6" id="6" class="normal num">6</button>
+            <button value="*" id="multi" class="operator other">*</button>
         </div>
         <div class="row">
-          <button title="1" id="1" class="num" onclick="input1(this.id)"><span class= "key">1</span></button>
-          <button title="2" id="2" class="num" onclick="input1(this.id)"><span class= "key">2</span></button>
-          <button title="3" id="3" class="num" onclick="input1(this.id)"><span class= "key">3</span></button>
-          <button title="-" id="-" class="opeartor" onclick="input2(this.id)"><span class= "key">-</span></button>
+          <button value="1" id="1" class="normal num">1</button>
+          <button value="2" id="2" class="normal num">2</button>
+          <button value="3" id="3" class="normal num">3</button>
+          <button value="-" id="sustract" class="operator other">-</button>
         </div>
           <div class="row">
-          <button title="0" id="0" class="num" onclick="input1(this.id)"><span class= "key">0</span></button>
-          <button title="." id="." class="num" onclick="input1(this.id)"><span class= "key">.</span></button>
-          <button title="←" id="←" class="opeartor" onclick="cancelChar()"><span class= "key">←</span></button>
-          <button title="+" id="+" class="opeartor" onclick="input2(this.id)"><span class= "key">+</span></button>
+          <button value="0" id="0" class="normal num">0</button>
+          <button value="." id="dot" class="normal dot">.</button>
+          <button value="←" id="cancel" class="cancelChar other"">←</button>
+          <button value="+" id="plus" class="operator other">+</button>
         </div>
         <div class="row" id="lastRow">
-          <button title="(" id="(" class="opeartor" onclick="input1(this.id)"><span class= "key">(</span></button>
-          <button title=")" id=")" class="opeartor" onclick="input1(this.id)"><span class= "key">)</span></button>
-          <button title="CE" id="CE" class="opeartor" onclick="cancelString()"><span class= "key">CE</span></button>
-          <button title="=" id="=" class="equal" onclick="calculation()"><span class= "key">=</span></button>
+          <button value="(" id="leftBracket" class="other num">(</button>
+          <button value=")" id="rightBracket" class="other num">)</button>
+          <button id="CE" class="cancelString other">CE</button>
+          <button id="=" class="equal">=</button>
         </div>
       </div>
     </div>
